tests/baselines/reference/objectTypeWithRecursiveWrappedProperty.errors.txt
tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedProperty.ts(13,1): error TS2322: Type 'List<文字>' is not assignable to type 'List<数字>'.
  Type '文字' is not assignable to type '数字'.


==== tests/cases/conformance/types/typeRelationships/recursiveTypes/objectTypeWithRecursiveWrappedProperty.ts (1 errors) ====
    // Basic recursive type
    
    class List<T> {
        data: T;
        next: List<List<T>>;
    }
    
    var list1 = new List<number>();
    var list2 = new List<number>();
    var list3 = new List<string>();
    
    list1 = list2; // ok
    list1 = list3; // error
    ~~~~~
!!! error TS2322: Type 'List<文字>' is not assignable to type 'List<数字>'.
!!! error TS2322:   Type '文字' is not assignable to type '数字'.